<resources>
    <string name="app_name">Mango_test_task</string>

    <string name="confirmation_button">Проверить</string>
    <string name="confirmation_code_title">Код подтверждения</string>
    <string name="confirmation_code_message">Введите код из смс</string>

    <string name="auth_confirmation_no_verification_local_code">*Длина кода должна составлять
        6 символов</string>
    <string name="auth_confirmation_no_verification_remote_code">Код не существует.
        Введите правильный код</string>
    <string name="auth_choice_info">Выберите страну или код страны</string>
    <string name="auth_hello_title">Рады снова Вас видеть</string>
    <string name="auth_info_message">Для авторизации введите номер телефона</string>
    <string name="auth_button">Авторизоваться</string>
    <string name="no_verification_phone_number">* Номер телефона должен состоять из 11 цифр,
        включая код страны</string>

    <string name="registration_title">Регистрация</string>
    <string name="registration_message">Заполните все поля</string>
    <string name="registration_button">Зарегистрировать</string>
    <string name="registration_error_message">Неподдерживаемый символ или строка осталась
        пустой</string>
    <string name="registration_help_name">*Имя может:\n
         -состоять только из латинских букв;\n
        -содержать заглавные буквы;\n
        -содержать строчные буквы;\n
        -поддерживает дефис;\n
        -должно быть длиннее 3x символов</string>
    <string name="registration_help_user_name">*UserName может:\n
         -состоять из латинских букв;\n
        -содержать заглавные буквы;\n
        -содержать строчные буквы;\n
        -поддерживает - и _;\n
        -должно быть длиннее 5ти символов</string>

    <string name="profile_update_button">Сохранить</string>
    <string name="profile_chat_button">Чат</string>
    <string name="profile_update_success_message">Обновление прошло успешно</string>
    <string name="profile_field_message">формат ввода XX.XX.XXXX</string>


    <string name="root_name">Имя</string>
    <string name="root_userName">UserName</string>
    <string name="root_birth_day">Дата рождения</string>
    <string name="root_city">Город</string>
    <string name="error_network_message">Обнаружены проблемы с интернетом. Просьба проверить
        состояние сети и повторить попытку</string>
    <string name="root_phone">Телефон</string>
    <string name="chat_title">Чаты</string>
    <string name="chat_button">Создать чат</string>

</resources>