<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.auth.presentation.authorization.AuthorizationFragment">



    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_hello_title"
            android:textColor="@color/green_200"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_info_message"
            android:textColor="@color/grey_200"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.legacy.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/country_flag"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_200"
                android:text="@string/auth_choice_info"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/country_code"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:errorTextColor="@color/error"
                app:boxStrokeColor="@color/green_200"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/green_200">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number"
                    android:textSize="16sp"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <androidx.legacy.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:indeterminateTint="@color/green_200"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/auth_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green_200"
            android:text="@string/auth_button" />
    </LinearLayout>

    <include layout="@layout/error_internet_tem"
        android:id="@+id/error_network"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</FrameLayout>