<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature.auth.presentation.confirmation.ConfirmationCodeFragment">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmation_code_title"
            android:textColor="@color/green_200"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmation_code_message"
            android:textColor="@color/grey_200"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.legacy.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/auth_code_layout"
            android:layout_width="160dp"
            android:layout_gravity="center"
            app:hintTextColor="@color/green_200"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/green_200">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/auth_code"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.legacy.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:indeterminateTint="@color/green_200"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/auth_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green_200"
            android:text="@string/auth_button" />
    </LinearLayout>

    <include layout="@layout/error_internet_tem"
        android:id="@+id/error_network"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</FrameLayout>