<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.profile.presentation.ProfileFragment">

    <View
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/green_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <androidx.cardview.widget.CardView
        android:id="@+id/image_card"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="360dp"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header">

        <ImageView
            android:id="@+id/userAvatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:src="@tools:sample/avatars"
            android:scaleType="centerCrop"
            android:importantForAccessibility="no" />
        <Button
            android:id="@+id/user_avatar_update_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:icon="@drawable/profile_ic_edit_mode"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            app:backgroundTint="@color/white"
            />

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_card">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/header"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/root_phone"
                android:textColorHint="@color/grey_200"
                app:boxStrokeColor="@color/green_200"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/green_200">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/root_userName"

                android:textColorHint="@color/grey_200"
                app:boxStrokeColor="@color/green_200"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/green_200">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birth_day_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/root_birth_day"
                android:textColorHint="@color/grey_200"
                app:boxStrokeColor="@color/green_200"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/green_200">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birth_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/root_city"
                android:textColorHint="@color/grey_200"
                app:boxStrokeColor="@color/green_200"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/green_200">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:backgroundTint="@color/green_200"
                android:text="@string/profile_update_button" />

            <Button
                android:id="@+id/chat_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green_200"
                android:text="@string/profile_chat_button" />

        </LinearLayout>

    </ScrollView>



    <FrameLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:elevation="3dp"
        android:visibility="gone"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/green_200" />
    </FrameLayout>

    <include layout="@layout/error_internet_tem"
        android:id="@+id/error_network"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>